argocd/apps/dashy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: <path:secret/data/admin/apps/dashy#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy
            port:
              number: 80
  tls:
  - hosts:
    - <path:secret/data/admin/apps/dashy#domain>
    secretName: <path:secret/data/admin/apps/dashy#domain>
